--- a/formDangNhap.html
+++ b/formDangNhap.html
@@ -120,14 +120,14 @@
                     </i>
                     <i class="ti-mobile"> Điện thoại: 0941622670<br /> </i>
                     <i class="ti-email"> Email: phuan2017@gmail.com <br /></i>
-                    <i class="ti-world"> Web: <a href="D:\BigProject-Web\html\index.html">www.shopbansach.com</a>
+                    <i class="ti-world"> Web: <a href="index.html">www.shopbansach.com</a>
                         <br /></i>
                 </div>
                 <div class="icon">
-                    <a href="https://www.facebook.com/11012001an/"><i class="ti-facebook"></i></a>
-                    <a href="https://www.youtube.com/channel/UC7oaiP-3mAVxrEbNivGouxQ"><i class="ti-youtube"></i></a>
-                    <a href="https://www.twitter.com"><i class="ti-twitter"></i></a>
-                    <a href="https://www.instagram.com/ngphuan2017/"><i class="ti-instagram"></i></a>
+                    <a target="_blank" rel="noopener" href="https://www.facebook.com/11012001an/"><i class="ti-facebook"></i></a>
+                    <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UC7oaiP-3mAVxrEbNivGouxQ"><i class="ti-youtube"></i></a>
+                    <a target="_blank" rel="noopener" href="https://www.twitter.com"><i class="ti-twitter"></i></a>
+                    <a target="_blank" rel="noopener" href="https://www.instagram.com/ngphuan2017/"><i class="ti-instagram"></i></a>
                 </div>
             </div>
         </div>
