--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               <nav id="nav" class="nav">
                 <ul>
                     <li><a style="font-weight: bolder; color: white; background-color: #fa9e14;"
-                        href="./index.html">Trang Chủ</a></li>
-                    <li><a href="./GioiThieu.html">Giới thiệu</a></li>
+                        href="index.html">Trang Chủ</a></li>
+                    <li><a href="GioiThieu.html">Giới thiệu</a></li>
                     <li class="nav-item dropdown">
                       <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                         Đồ Dùng Học Sinh
@@ -113,7 +113,7 @@
         </div>
 
         <div id="content">
-          <img style="width: 1350px; padding-top: 24px;" src="../Images/book2.jpg" alt="">
+          <img style="width: 1350px; padding-top: 24px;" src="Images/book2.jpg" alt="">
           <div class="menu1">
               <h3 text-align="center">XEM THÊM TIN</h3>
               <hr>
@@ -136,64 +136,64 @@
                       <li><a href="#">Bảng giá sách kinh doanh 6/2020</a></li>
                   </ul>
               </div>
-              <img style="width: 288px; height: 180px;" src="../Images/muichia.png" alt="">
+              <img style="width: 288px; height: 180px;" src="Images/muichia.png" alt="">
               <h3>HỖ TRỢ TRỰC TUYẾN</h3>
               <div style="text-align: center; font-size: 20px;" class="ti-headphone-alt"> Tư Vấn</div>
               <br>
               <p style="text-align: center; font-weight: 600; padding: 12px 0px 12px 0px;"> Điện Thoại : 028 3844 1433</p>
               <br>
-              <img style="width: 280px; padding-left: 4px; border-radius: 10px; padding-bottom: 16px;" src="../Images/logo-sach(3).jpg">
+              <img style="width: 280px; padding-left: 4px; border-radius: 10px; padding-bottom: 16px;" src="Images/logo-sach(3).jpg">
 
 
           </div>
           <div id="khoangtrong1"></div>
           <div class="sub-container">
-              <h2 id="text-content">SÁCH MỚI CẬP NHẬT <img src="../Images/new.jpg.gif" alt=""></h2>
+              <h2 id="text-content">SÁCH MỚI CẬP NHẬT <img src="Images/new.jpg.gif" alt=""></h2>
               <!-- hang 1 -->
               <div class="main-content1 subimg1">
-                  <a href="./ThongTinSach.html#1"><img height="230px" class="img1" src="../Images/DacNhanTam.png" alt="sach"></a>
+                  <a href="ThongTinSach.html#1"><img height="230px" class="img1" src="Images/DacNhanTam.png" alt="sach"></a>
                   <p class="text-pic">Đắc Nhân Tâm</p>
                   <p class="text-pic">210.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <div class="main-content1 subimg2">
-                  <a href="./ThongTinSach.html#2"><img style="width:48%; height: 230px;" class="img1" src="../Images/TheOneThing.gif" alt="sach"></a>
+                  <a href="ThongTinSach.html#2"><img style="width:48%; height: 230px;" class="img1" src="Images/TheOneThing.gif" alt="sach"></a>
                   <p class="text-pic">Điều Ý Nghĩa Nhất Trong Cuộc Đời</p>
                   <p class="text-pic">189.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <div class="main-content1 subimg3">
-                  <a href="./ThongTinSach.html#3"><img height="230px" class="img1" src="../Images/DamNghiLon.jpg" alt="sach"></a>
+                  <a href="ThongTinSach.html#3"><img height="230px" class="img1" src="Images/DamNghiLon.jpg" alt="sach"></a>
                   <p class="text-pic">Dám Nghĩ Lớn</p>
                   <p class="text-pic">145.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <!-- hang 2 -->
               <div class="main-content1 subimg4">
-                  <a href="./ThongTinSach.html#4"><img height="230px" class="img1" src="../Images/NhaGiaKim.jpg" alt="sach"></a>
+                  <a href="ThongTinSach.html#4"><img height="230px" class="img1" src="Images/NhaGiaKim.jpg" alt="sach"></a>
                   <p class="text-pic">Nhà Giả Kim</p>
                   <p class="text-pic">199.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <div class="main-content1 subimg5">
-                  <a href="./ThongTinSach.html#5"><img height="230px" class="img1" src="../Images/ThucTinhMucDichSong.jpg" alt="sach"></a>
+                  <a href="ThongTinSach.html#5"><img height="230px" class="img1" src="Images/ThucTinhMucDichSong.jpg" alt="sach"></a>
                   <p class="text-pic">Thức Tỉnh Mục Đích Sống</p>
                   <p class="text-pic">104.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <div class="main-content1 subimg6">
-                  <a href="./ThongTinSach.html#6"><img height="230px" class="img1" src="../Images/7ThoiQuenDeThanhDat.jpg" alt="sach"></a>
+                  <a href="ThongTinSach.html#6"><img height="230px" class="img1" src="Images/7ThoiQuenDeThanhDat.jpg" alt="sach"></a>
                   <p class="text-pic">7 Thói Quen Để Thành Đạt</p>
                   <p class="text-pic">166.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <!-- hang 3 -->
               <div class="main-content1 subimg7">
-                  <a href="./ThongTinSach.html#7"><img height="230px" class="img1" src="../Images/NhungBaiHocCuocSong.jpg" alt="sach"></a>
+                  <a href="ThongTinSach.html#7"><img height="230px" class="img1" src="Images/NhungBaiHocCuocSong.jpg" alt="sach"></a>
                   <p class="text-pic">Những Bài Học Cuộc Sống</p>
                   <p class="text-pic">132.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <div class="main-content1 subimg8">
-                  <a href="./ThongTinSach.html#8"><img height="230px" class="img1" src="../Images/DocViBatKiAi.gif" alt="sach"></a>
+                  <a href="ThongTinSach.html#8"><img height="230px" class="img1" src="Images/DocViBatKiAi.gif" alt="sach"></a>
                   <p class="text-pic">Đọc Vị Bất Kì Ai</p>
                   <p class="text-pic">187.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
               <div class="main-content1 subimg9">
-                  <a href="./ThongTinSach.html#9"><img height="230px" class="img1" src="../Images/DieuKiDieuCuaThaiDoSong.gif" alt="sach"></a>
+                  <a href="ThongTinSach.html#9"><img height="230px" class="img1" src="Images/DieuKiDieuCuaThaiDoSong.gif" alt="sach"></a>
                   <p class="text-pic">Điều Kì Diệu Của Thái Độ Sống</p>
                   <p class="text-pic">122.000 ₫ <input onclick="thongBao()" style="color: red; padding: 4px 6px 4px 6px; cursor: pointer;" type="button" value="Mua"></p>
               </div>
