--- a/GioiThieu.html
+++ b/GioiThieu.html
@@ -6,38 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phú An Shop</title>
-    <link href="../Images/iconshop.png" rel="shortcut icon" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../fonts/themify-icons/themify-icons.css">
+    <link href="Images/iconshop.png" rel="shortcut icon" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/themify-icons/themify-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="../JavaScript/backtop.js"></script>
+    <script src="JavaScript/backtop.js"></script>
 </head>
 
 <body>
     <div id="container">
         <div id="header">
             <ul id="nav">
-                <li><a href="./index.html">Trang Chủ</a></li>
+                <li><a href="index.html">Trang Chủ</a></li>
                 <li>
                     <a href="">Phân Loại
                         <i class="ti-angle-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="./TopHotPick.html">Top Bán Chạy</a></li>
-                        <li><a href="./DangGiamGia.html">Đang Giảm Giá</a></li>
-                        <li><a href="./SachHay.html">Sách Hay</a></li>
+                        <li><a href="TopHotPick.html">Top Bán Chạy</a></li>
+                        <li><a href="DangGiamGia.html">Đang Giảm Giá</a></li>
+                        <li><a href="SachHay.html">Sách Hay</a></li>
                     </ul>
                 </li>
-                <li><a href="./TinTuc.html">Tin Tức</a></li>
-                <li><a href="./GioiThieu.html">Giới Thiệu</a></li>
+                <li><a href="TinTuc.html">Tin Tức</a></li>
+                <li><a href="GioiThieu.html">Giới Thiệu</a></li>
                 <li><a href="#footer">Liên Hệ</a></li>
                 <li><a href="">Tài Khoản
                     <i class="ti-angle-down"></i>
                      </a>
                     <ul class="subnav">
-                        <li><a href="./formDangNhap.html">Đăng Nhập</a></li>
-                        <li><a href="./formDangKi.html">Đăng Kí</a></li>
+                        <li><a href="formDangNhap.html">Đăng Nhập</a></li>
+                        <li><a href="formDangKi.html">Đăng Kí</a></li>
                     </ul>
                 </li>
             </ul>
@@ -80,13 +80,13 @@
                             <li><a href="#">Bảng giá sách kinh doanh 6/2020</a></li>
                         </ul>
                     </div>
-                    <img style="width: 288px; height: 180px;" src="../Images/muichia.png" alt="">
+                    <img style="width: 288px; height: 180px;" src="Images/muichia.png" alt="">
                     <h3>HỖ TRỢ TRỰC TUYẾN</h3>
                     <div style="text-align: center; font-size: 20px;" class="ti-headphone-alt" > Tư Vấn</div>
                     <br>
                     <p style="text-align: center; font-weight: 600; padding: 12px 0px 12px 0px;"> Điện Thoại : 028 3844 1433</p>
                     <br>
-                    <img style="width: 280px; padding-left: 4px; border-radius: 10px; padding-bottom: 16px;" src="../Images/logo-sach(3).jpg">
+                    <img style="width: 280px; padding-left: 4px; border-radius: 10px; padding-bottom: 16px;" src="Images/logo-sach(3).jpg">
                     
 
                 </div>
@@ -94,7 +94,7 @@
             <div class="sub-container">
                 <h2 id="text-content">Giới Thiệu SHOP</h2>
                 <div class="gioithieu1">
-                    <img style="width: 40%; height: 30%; position: absolute; top: 100px; left: 20px;" src="../Images/gioithieu1.jpg" alt="">
+                    <img style="width: 40%; height: 30%; position: absolute; top: 100px; left: 20px;" src="Images/gioithieu1.jpg" alt="">
                         <h3 style="padding-top: 70px; padding-left: 400px; color: red; font-size: 30px;" >Slogan</h3>
                     <div style="padding-top: 30px;" class="slogan">
                         <p style="width: 500px; float: right; font-size: 20px; text-align: justify; margin-right: 50px;">" Đọc sách không giúp cho bạn giàu..</p>
@@ -111,7 +111,7 @@
                     
                     <div class="team">
                         <h3 style="color: tomato; font-size: 30px;">Người Sáng Lập</h3>
-                        <div class="mem"><img src="../Images/an.jpg" alt="avatar"></div>
+                        <div class="mem"><img src="Images/an.jpg" alt="avatar"></div>
                     </div>
                     <div style="position: absolute; top: 1040px; left: 500px;" class="mem2">Nguyễn Phú An</div>
                 </div>
