--- a/formDangNhap.html
+++ b/formDangNhap.html
@@ -6,41 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phú An Shop</title>
-    <link href="../Images/iconshop.png" rel="shortcut icon" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../fonts/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="../css/font-awesome.css">
+    <link href="Images/iconshop.png" rel="shortcut icon" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <script src="../JavaScript/dangnhap.js"></script>
+    <script src="JavaScript/dangnhap.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="../JavaScript/backtop.js"></script>
+    <script src="JavaScript/backtop.js"></script>
 </head>
 
 <body>
     <div id="container">
         <div id="header">
             <ul id="nav">
-                <li><a href="./index.html">Trang Chủ</a></li>
+                <li><a href="index.html">Trang Chủ</a></li>
                 <li>
                     <a href="">Phân Loại
                         <i class="ti-angle-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="./TopHotPick.html">Top Bán Chạy</a></li>
-                        <li><a href="./DangGiamGia.html">Đang Giảm Giá</a></li>
-                        <li><a href="./SachHay.html">Sách Hay</a></li>
+                        <li><a href="TopHotPick.html">Top Bán Chạy</a></li>
+                        <li><a href="DangGiamGia.html">Đang Giảm Giá</a></li>
+                        <li><a href="SachHay.html">Sách Hay</a></li>
                     </ul>
                 </li>
-                <li><a href="./TinTuc.html">Tin Tức</a></li>
-                <li><a href="./GioiThieu.html">Giới Thiệu</a></li>
+                <li><a href="TinTuc.html">Tin Tức</a></li>
+                <li><a href="GioiThieu.html">Giới Thiệu</a></li>
                 <li><a href="#footer">Liên Hệ</a></li>
                 <li><a href="">Tài Khoản
                     <i class="ti-angle-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="./formDangNhap.html">Đăng Nhập</a></li>
-                        <li><a href="./formDangKi.html">Đăng Kí</a></li>
+                        <li><a href="formDangNhap.html">Đăng Nhập</a></li>
+                        <li><a href="formDangKi.html">Đăng Kí</a></li>
                     </ul>
                 </li>
             </ul>
@@ -72,7 +72,7 @@
                         <form class="login-container" action="#" method="post">
                             <input id="tai-khoan" type="email" placeholder="Tài Khoản/Email" Name="Email" required="">
                             <input id="mat-khau" type="password" placeholder="Mật Khẩu" Name="password" required="">
-                            <input onclick="xuLyDangNhap()" type="submit" value="Đăng Nhập" src="./index.html">
+                            <input onclick="xuLyDangNhap()" type="submit" value="Đăng Nhập" src="index.html">
                         </form>
                         <div class="second-section">
                             <div class="bottom-header">
