--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                         Tài khoản
                       </a>
                       <div class="dropdown-menu">
-                        <a style="color: blue;" class="dropdown-item" href="#">Đăng nhập</a>
-                        <a style="color: green;" class="dropdown-item" href="#">Đăng kí</a>
+                        <a style="color: blue;" class="dropdown-item" href="formDangNhap.html">Đăng nhập</a>
+                        <a style="color: green;" class="dropdown-item" href="formDangKi.html">Đăng kí</a>
                       </div>
                     </li>
                 </ul>
