--- a/formDangNhap.html
+++ b/formDangNhap.html
@@ -54,12 +54,6 @@
             </form>
         </div>
 
-
-        <div id="slider">
-            <div class="texts text-slide2">BOOKSTORE</div>
-            <div class="texts text-slide1">Đọc Sách Giúp Bạn Thư Giãn Mỗi Ngày</div>
-        </div>
-
         <div id="content">
             <div class="login-form">
                 <!--  Title-->
@@ -96,7 +90,7 @@
                         </div>
 
                         <div class="bottom-text w3_bottom_text">
-                            <p>Bạn chưa có tài khoản ?<a href="#"> Đăng kí ngay !</a></p>
+                            <p>Bạn chưa có tài khoản ?<a href="formDangKi.html"> Đăng kí ngay !</a></p>
                             <h4> <a href="#">Quên Mật Khẩu ?</a></h4>
                         </div>
 
