--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <div class="icon">
                   <a target="_blank" rel="noopener" href="https://www.facebook.com/11012001an/"><i class="ti-facebook"></i></a>
                   <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UC7oaiP-3mAVxrEbNivGouxQ"><i class="ti-youtube"></i></a>
-                  <a target="_blank" rel="noopener" href="https://www.twitter.com"><i class="ti-twitter"></i></a>
+                  <a target="_blank" rel="noopener" href="https://twitter.com/AnPh78450950"><i class="ti-twitter"></i></a>
                   <a target="_blank" rel="noopener" href="https://www.instagram.com/an.np_it/"><i class="ti-instagram"></i></a>
               </div>
           </div>
