--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div id="main">
           <header>
               <div class="shop">
-                  <a href="#" title="Phú An Shop" rel="home">
-                      <img src="static/img/Shoppe.png" alt="Shop" />
+                  <a class="logo" href="index.html" title="Phú An Shop" rel="home">
+                      <img src="static/img/logo.png" alt="Phú An Shop" />
                   </a>
                   <form class="form-inline search" action="/action_page.php">
                     <div>
@@ -103,7 +103,10 @@
               </nav>
         </header>
         <div id="slider">
-          <div class="slider-images"></div>
+          <div class="text-slider">
+            <img src="static/img/shops.png" alt="Phú An Shop">
+            <h4>Giá rẻ và chất lượng</h4>
+          </div>
         </div>
 
         <div id="content" class="container">
