--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </button>
                     </div>
                   </form>
-                  <a href="#" class="basket"><img src="static/img/shopping-cart.png" alt="basket" /></a>
+                  <a href="#" class="basket btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
               </div>
               <nav id="nav">
                 <ul>
@@ -110,7 +110,162 @@
         </div>
 
         <div id="content" class="container">
-          <img style="width: 1350px; padding-top: 24px;" onerror="this.src='img/404.jpg'" src="Images/book2.jpg" alt="">
+          <div class="content-section">
+            <div class="content-title">
+              <a href=""><h2 class="section-heading">Top bán chạy</h2></a>
+            </div>
+            <div class="products-block">
+              <div class="product-item">
+                <a href="">
+                  <img src="static/img/Top/z3221786161940_53a53a97be21b6ee29c61ed45be9bc24.jpg" alt="" class="product-img">
+                  <p class="product-name">Bút xóa Thiên Long</p>
+                  <p class="price">26.000&#8363; <del class="del-price">29.000&#8363;</del></p>
+                </a>
+                <a href="" class="btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+              <div class="product-item">
+                <a href="">
+                  <img src="static/img/Top/WB021.jpg" alt="" class="product-img">
+                  <p class="product-name">Bút lông bảng Thiên Long</p>
+                  <p class="price">6.800&#8363; <del class="del-price">8.700&#8363;</del></p>
+                </a>
+                <a href="" class="btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+              <div class="product-item">
+                <a href="">
+                  <img src="static/img/Top/PM041.jpg" alt="" class="product-img">
+                  <p class="product-name">Bút lông dầu Thiên Long</p>
+                  <p class="price">10.800&#8363; <del class="del-price">12.000&#8363;</del></p>
+                </a>
+                <a href="" class="btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+              <div class="product-item">
+                <a href="">
+                  <img src="static/img/Top/bbt002_0108_163505_tdfXOY.jpg" alt="" class="product-img">
+                  <p class="product-name">Bút bi Thiên Long</p>
+                  <p class="price">4.500&#8363; <del class="del-price">5.000&#8363;</del></p>
+                </a>
+                <a href="" class="btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+              <div class="product-item">
+                <a href="">
+                  <img src="static/img/Top/z3218931562602_c1ce523c82d7b20fa02debce9c56eba8.jpg" alt="" class="product-img">
+                  <p class="product-name">Khẩu trang Y tế</p>
+                  <p class="price">33.000&#8363; <del class="del-price">35.000&#8363;</del></p>
+                </a>
+                <a href="" class="btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+              <div class="product-item">
+                <a href="">
+                  <img src="static/img/Top/ThienLongHL-03(FS).jpg" alt="" class="product-img">
+                  <p class="product-name">Bút dạ quang Thiên Long</p>
+                  <p class="price">9.000&#8363; <del class="del-price">10.000&#8363;</del></p>
+                </a>
+                <a href="" class="btn-product"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="content-section">
+            <div class="content-title">
+              <a href=""><h2 class="section-heading">Đồ dùng học sinh</h2></a>
+            </div>
+            <div class="row">
+              <div class="block-section">
+                <div class="banner-block">
+                  <a href="">
+                    <img src="" onerror="this.src='static/img/404.png'" alt="">
+                  </a>
+                </div>
+                <div class="products-block">
+                  <!--  -->
+                </div>
+              </div>
+              <div class="col">
+                <!--  -->
+              </div>
+            </div>
+          </div>
+          <div class="content-section">
+            <div class="content-title">
+              <a href=""><h2 class="section-heading">Văn phòng phẩm</h2></a>
+            </div>
+            <div class="row">
+              <div class="block-section">
+                <div class="banner-block">
+                  <a href="">
+                    <img src="" onerror="this.src='static/img/404.png'" alt="">
+                  </a>
+                </div>
+                <div class="products-block">
+                  <!--  -->
+                </div>
+              </div>
+              <div class="col">
+                <!--  -->
+              </div>
+            </div>
+          </div>
+          <div class="content-section">
+            <div class="content-title">
+              <a href=""><h2 class="section-heading">Đồ chơi</h2></a>
+            </div>
+            <div class="row">
+              <div class="block-section">
+                <div class="banner-block">
+                  <a href="">
+                    <img src="" onerror="this.src='static/img/404.png'" alt="">
+                  </a>
+                </div>
+                <div class="products-block">
+                  <!--  -->
+                </div>
+              </div>
+              <div class="col">
+                <!--  -->
+              </div>
+            </div>
+          </div>
+          <div class="content-section">
+            <div class="content-title">
+              <a href=""><h2 class="section-heading">Sản phẩm khuyến mãi</h2></a>
+            </div>
+            <div class="row">
+              <div class="block-section">
+                <div class="banner-block">
+                  <a href="">
+                    <img src="" onerror="this.src='static/img/404.png'" alt="">
+                  </a>
+                </div>
+                <div class="products-block">
+                  <!--  -->
+                </div>
+              </div>
+              <div class="col">
+                <!--  -->
+              </div>
+            </div>
+          </div>
+          <div class="content-section">
+            <div class="content-title">
+              <a href=""><h2 class="section-heading">Mỹ phẩm</h2></a>
+            </div>
+            <div class="row">
+              <div class="block-section">
+                <div class="banner-block">
+                  <a href="">
+                    <img src="" onerror="this.src='static/img/404.png'" alt="">
+                  </a>
+                </div>
+                <div class="products-block">
+                  <!--  -->
+                </div>
+              </div>
+              <div class="col">
+                <!--  -->
+              </div>
+            </div>
+          </div>
           <div class="menu1">
               <h3 text-align="center">XEM THÊM TIN</h3>
               <hr>
@@ -214,11 +369,30 @@
                   <i class="ti-world"> Web: <a href="index.html">www.shopbansach.com</a>
                       <br /></i>
               </div>
-              <div class="icon">
-                  <a target="_blank" rel="noopener" href="https://www.facebook.com/11012001an/"><i class="ti-facebook"></i></a>
-                  <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UC7oaiP-3mAVxrEbNivGouxQ"><i class="ti-youtube"></i></a>
-                  <a target="_blank" rel="noopener" href="https://twitter.com/AnPh78450950"><i class="ti-twitter"></i></a>
-                  <a target="_blank" rel="noopener" href="https://www.instagram.com/an.np_it/"><i class="ti-instagram"></i></a>
+              <div id="icon">
+                <ul class="social">
+                  <li>
+                    <a target="_blank" rel="noopener" href="https://www.facebook.com/11012001an/">
+                      <i class="fa-brands fa-facebook"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UC7oaiP-3mAVxrEbNivGouxQ">
+                      <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    </li>
+                  <li>
+                    <a target="_blank" rel="noopener" href="https://twitter.com/AnPh78450950">
+                      <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    
+                  </li>
+                  <li>
+                    <a target="_blank" rel="noopener" href="https://www.instagram.com/an.np_it/">
+                      <i class="fa-brands fa-instagram"></i>
+                    </a> 
+                  </li>
+                </ul>
               </div>
           </div>
         </div>
